# Aurora

./: README.md  bash.sh
spark-sgx-bytebuddy/: README.md  build.sh  pom.xml
spark-sgx-bytebuddy/src/main/java/org/apache/spark/sgx/: AgentSpark.java  COMPLETE_FILE_STRUCTURE.md  FILE_STRUCTURE.md  SGXCoalesceAdvice.java  SGXCoalesceFactory.java  SGXCollectActionAdvice.java  SGXCollectActionFactory.java  SGXCountActionAdvice.java  SGXCountActionFactory.java  SGXDistinctRDDAdvice.java  SGXDistinctRDDFactory.java  SGXFilteredRDDAdvice.java  SGXFilteredRDDFactory.java  SGXFirstActionAdvice.java  SGXFirstActionFactory.java  SGXFlatMapValuesAdvice.java  SGXFlatMapValuesFactory.java  SGXFlatMappedRDDAdvice.java  SGXFlatMappedRDDFactory.java  SGXForeachActionAdvice.java  SGXForeachActionFactory.java  SGXGroupedRDDAdvice.java  SGXGroupedRDDFactory.java  SGXIntersectionRDDAdvice.java  SGXIntersectionRDDFactory.java  SGXJNIWrapper.java  SGXJoinedRDDAdvice.java  SGXJoinedRDDFactory.java  SGXMapPartitionsRDDAdvice.java  SGXMapPartitionsRDDFactory.java  SGXMapValuesAdvice.java  SGXMapValuesFactory.java  SGXReduceActionAdvice.java  SGXReduceActionFactory.java  SGXReducedRDDAdvice.java  SGXReducedRDDFactory.java  SGXSampleAdvice.java  SGXSampleFactory.java  SGXSortByAdvice.java  SGXSortByFactory.java  (+5 more)
spark-sgx-bytebuddy/src/main/java/org/apache/spark/sgx/config/: SGXSparkConfig.java
spark-sgx-bytebuddy/src/main/resources/: sgx-spark-config.properties
spark-sgx-bytebuddy/src/test/java/org/apache/spark/sgx/: SGXSparkAgentTest.java
spark-sgx-native/: CMakeLists.txt  README.md  build.sh  spark-sgx-native.pc.in
spark-sgx-native/include/enclave/: sgx_spark_enclave.h
spark-sgx-native/include/jni/: sgx_spark_jni.h
spark-sgx-native/include/operations/: rdd_compute.h
spark-sgx-native/include/utils/: data_serialization.h  sgx_utils.h
spark-sgx-native/src/enclave/: sgx_spark_enclave.cpp
spark-sgx-native/src/jni/: jni_init.cpp  sgx_spark_jni_main.cpp
spark-sgx-native/src/jni/operations/actions/: collect_action_jni.cpp  count_action_jni.cpp  first_action_jni.cpp  foreach_action_jni.cpp  reduce_action_jni.cpp  take_action_jni.cpp
spark-sgx-native/src/jni/operations/core/: distinct_rdd_jni.cpp  filtered_rdd_jni.cpp  flat_mapped_rdd_jni.cpp  intersection_rdd_jni.cpp  map_partitions_rdd_jni.cpp  union_rdd_jni.cpp
spark-sgx-native/src/jni/operations/keyvalue/: grouped_rdd_jni.cpp  joined_rdd_jni.cpp  reduced_rdd_jni.cpp
spark-sgx-native/src/jni/operations/transformations/: coalesce_jni.cpp  flat_map_values_jni.cpp  map_values_jni.cpp  sample_jni.cpp  sort_by_jni.cpp
spark-sgx-native/src/operations/: rdd_compute_factory.cpp
spark-sgx-native/src/operations/actions/: collect_action_compute.cpp  count_action_compute.cpp  first_action_compute.cpp  foreach_action_compute.cpp  reduce_action_compute.cpp  take_action_compute.cpp
spark-sgx-native/src/operations/core/: distinct_rdd_compute.cpp  filtered_rdd_compute.cpp  flat_mapped_rdd_compute.cpp  intersection_rdd_compute.cpp  map_partitions_rdd_compute.cpp  union_rdd_compute.cpp
spark-sgx-native/src/operations/keyvalue/: grouped_rdd_compute.cpp  joined_rdd_compute.cpp  reduced_rdd_compute.cpp
spark-sgx-native/src/operations/transformations/: coalesce_compute.cpp  flat_map_values_compute.cpp  map_values_compute.cpp  sample_compute.cpp  sort_by_compute.cpp
spark-sgx-native/src/utils/: data_serialization.cpp  sgx_utils.cpp
spark-sgx-native/tests/: test_main.cpp
